# GopiAI

./: # Introduction_Smithery.md  # 🚀 Быстрый старт после RAG Cleanup.md  .copilot-instructions.md  .gitignore  CLEANUP_FINAL_REPORT.json  CLEANUP_SUMMARY.md  CREWAI_CLIENT_HARDENING_SUMMARY.md  CREWAI_INTEGRATION_PLAN.md  CREWAI_SERVER_TROUBLESHOOTING.md  DEMO_REPORT.md  ENVIRONMENTS_README.md  FILESYSTEM_ACCESS_GUIDE.md  FIXES_SUMMARY.md  LICENSE  LOGGING_SETUP.md  MEMORY_INTEGRATION_GUIDE.md  MEMORY_INTEGRATION_README.md  MEMORY_TESTING_GUIDE.md  MODULE_FOLDERS_ANALYSIS.json  PROJECT_AUDIT_REPORT.md  QUICK_START.md  RAG_INTEGRATION_REPORT.md  RAG_TO_TXTAI_MIGRATION_REPORT.md  README.md  README_FIXES.md  SAFETY_CLEANUP_REPORT.md  TOOLS_SETUP_REPORT.md  add_rag_logging.py  analyze_problems.py  apply_memory_fix.py  audio_tool.py  audit_report.md  auto_backup.bat  auto_cleanup.py  bash.exe.stackdump  check_log_files.py  check_logs.bat  check_serena_tools.py  check_syntax.py  clean_crewai_logs.py  (+143 more)
GopiAI-App/: README.md  pyproject.toml  setup_browsermcp.py  show_test_info.py  start_mcp_server.bat
GopiAI-App/examples/: external_ai_services_example.py  hybrid_browser_agent_example.py  run_browser_specialized_agent.py  run_my_component.py  simple_test_interface.py
GopiAI-App/gopiai/app/: __init__.py  config.py  icons_rc.py  logger.py
GopiAI-App/tests/: build_and_test.py  enhanced_build_and_test.py  run_example.py  run_interface.py  run_test.py  test_agents.py  test_agents.test.py  test_browser_adapter.py  test_browser_adapter.test.py  test_browser_specialized_agent.py  test_browser_specialized_agent.test.py  test_browser_specialized_agent_simple.py  test_browser_specialized_agent_simple.test.py  test_browser_tools.py  test_browser_tools.test.py  test_embedded_browser_mcp.py  test_embedded_browser_mcp.test.py  test_hybrid_adapter.py  test_hybrid_adapter.test.py  test_hybrid_agent.py  test_hybrid_agent.test.py  test_my_component.py  test_my_component.test.py  test_simple_browser.py  test_simple_browser.test.py  ИНСТРУКЦИЯ_ПО_ТЕСТИРОВАНИЮ.md  ОТЧЕТ_О_ТЕСТИРОВАНИИ.md
GopiAI-Assets/: README.md  pyproject.toml  pytest.ini  test_results_GopiAI-Assets_unit.xml  test_results_GopiAI-Assets_unit_retry0.xml  test_results_GopiAI-Assets_unit_retry1.xml  test_results_GopiAI-Assets_unit_retry2.xml  test_results_GopiAI-Assets_unit_retry3.xml
GopiAI-Assets/gopiai/assets/: GopiAI_LOGO_base64.txt  __init__.py  titlebar_with_menu.py  wallpapers.xcf
GopiAI-Assets/tests/: __init__.py
GopiAI-Assets/tests/integration/: __init__.py  test_asset_integration.py
GopiAI-Assets/tests/unit/: __init__.py  test_assets.py
GopiAI-Assets/ОБЩАЯ ИНФОРМАЦИЯ О ПРОЕКТЕ/: README_CLEANUP.md
GopiAI-Core/: CONTRIBUTING.md  README.md  TEST_IMPLEMENTATION_SUMMARY.md  exceptions.py  exceptions.test.py  interfaces.py  interfaces.test.py  pyproject.toml  pytest.ini  schema.py  schema.test.py  test_results_GopiAI-Core_unit.xml  test_results_GopiAI-Core_unit_retry0.xml  test_results_GopiAI-Core_unit_retry1.xml  test_results_GopiAI-Core_unit_retry2.xml  test_results_GopiAI-Core_unit_retry3.xml
GopiAI-Core/agent/: README.md  browser.py  manus.py  orchestrator.py  planning.py  swe.py  toolcall.py
GopiAI-Core/gopiai/: __init__.py  __init__.test.py
GopiAI-Core/gopiai/core/: __init__.py  __init__.test.py  agents.py  agents.test.py  config.py  config.test.py  crewai_client.py  crewai_client.test.py  exceptions.py  interfaces.py  logging.py  logging.test.py  main.py  main.test.py  schema.py  simple_theme_manager.py  utils.py
GopiAI-Core/settings/: simple_theme.json
GopiAI-Core/tests/: __init__.py  conftest.py  test_exceptions.py  test_interfaces.py  test_minimal_app.py  test_schema.py  test_utils.py
GopiAI-Core/tests/integration/: __init__.py  test_core_integration.py
GopiAI-CrewAI/gopiai/: README.md  pyproject.toml
GopiAI-CrewAI/gopiai/knowledge/: user_preference.txt
GopiAI-CrewAI/gopiai/llm/: __init__.py  mock_provider.py  payload_builder.py  provider_factory.py  tool_executor.py  tool_spec.py
GopiAI-CrewAI/gopiai/logging/: json_logger.py
GopiAI-CrewAI/gopiai/middleware/: log_middleware.py
GopiAI-Extensions/: README.md  TEST_INSTRUCTIONS.md  agent_ui_integration.py  browser_integrator.py  code_analysis_integration.py  pyproject.toml  ОБНОВЛЕНИЯ.md
GopiAI-Extensions/autogen/: .env.example  README.md  TEST_INTEGRATION.md  __init__.py  autogen_core.py  autogen_extension.py
GopiAI-Extensions/examples/: run_notification_center.py  run_project_explorer.py  run_status_bar.py
GopiAI-Extensions/gopiai/: __init__.py
GopiAI-Extensions/gopiai/extensions/: __init__.py  productivity_extension.py
GopiAI-Extensions/tests/: test_extensions_loading.py  test_notification_center_extension.py  test_status_bar_extension.py
GopiAI-UI/: README.md  README_PANEL_TOOLS.md  SMART_BROWSER_README.md  SPLITTER_IMPROVEMENTS.md  SmartBrowserAgent.py  SmartURLFinder.py  browser_integration.py  file_integration_methods.py  pyproject.toml  pytest.ini  quick_integration_example.py  simple_emotion_classifier.py  test_integration.py  test_markdown_renderer_standalone.py  test_memory.py  test_memory_core.py  test_memory_direct.py  test_memory_integration.py  test_memory_minimal.py  test_memory_system.py  test_standalone_memory.py
GopiAI-UI/conversations/: chats.json
GopiAI-UI/gopiai/: __init__.py  logging_config.py  ui
GopiAI-UI/gopiai/logging/: ui_logger.ts
GopiAI-UI/gopiai/settings/: simple_theme.json
GopiAI-UI/gopiai/ui/: __init__.py  base.py  llm.py  (+3 more)
GopiAI-UI/tests/: __init__.py  test_ui_assistant_security.py
GopiAI-UI/ui/: main.py
GopiAI-WebView/: README.md  pyproject.toml
GopiAI-WebView/examples/: simple_chat.py
GopiAI-WebView/tests/: test_puter_interface.py  test_webview_widget.py
GopiAI-Widgets/: README.md  pyproject.toml  ОБНОВЛЕНИЯ.md
GopiAI-Widgets/examples/: card_widget_demo.py  run_card_widget.py  run_simple_label.py  run_text_editor.py  test_card_widget_standalone.py
GopiAI-Widgets/gopiai/: __init__.py
GopiAI-Widgets/tests/: test_card_widget.py  test_simple_label.py  test_text_editor.py
(+1349 files in other folders)
