[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gopiai-app"
version = "0.1.0"
description = "Основной модуль приложения GopiAI"
requires-python = ">=3.8"
dependencies = [
    "PySide6>=6.5.0",
    "gopiai-core",
    "gopiai-widgets",
    "gopiai-ui",
    "gopiai-webview",
    "gopiai-extensions",
]

[tool.setuptools]
packages = ["gopiai.app"]
