[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gopiai-ui"
version = "0.3.0"
description = "GopiAI UI Components and Interface"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "PySide6>=6.5.0",
]

[project.optional-dependencies]
full = [
    "gopiai-core",
    "gopiai-widgets",
]
dev = [
    "pytest>=7.0.0",
    "pytest-qt>=4.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["gopiai*"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
