[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gopiai-webview"
version = "0.1.0"
description = "GopiAI WebView module for AI chat integration via puter.js"
authors = [
    {name = "GopiAI Team"}
]
requires-python = ">=3.8"
dependencies = [
    "PySide6>=6.5.0",
    "gopiai-core",
    "gopiai-ui"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-qt>=4.0.0",
    "pytest-mock>=3.0.0"
]

[tool.setuptools]
packages = ["gopiai.webview"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"