[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gopiai-widgets"
version = "0.1.0"
description = "Модуль пользовательских виджетов для GopiAI"
requires-python = ">=3.8"
dependencies = [
    "PySide6>=6.5.0",
    "gopiai-core>=0.1.0",
]

[tool.setuptools]
packages = ["gopiai.widgets"]
